---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2020.1.24
  Features:
    - Updated to Factorio 0.18
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2019.12.31
  Features:
    - Initial release