@@ -11,4 +11,3 @@ import=Import quickbar template
 [qt-chat-message]
 invalid-blueprint=Invalid quickbar template blueprint!
 invalid-default-blueprint=Invalid default quickbar template!
-default-template-import-failed=QUICKBAR TEMPLATES: Failure to import default template. Please contact the mod author.
